<resources>
    <string name="email_hint">Email</string>
    <string name="app_name">My Application</string>
    <string name="password_hint">Password</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter an email adress and password</string>
    <string name="signup_error_title">Error !</string>
    <string name="signup_succes">Account successfully created! You can now Login.</string>
    <string name="login_error_message">Please make sure you enter an email address and password</string>
    <string name="login_error_title">Error !</string>
    <string name="login_button_label">Login </string>
    <string name="sign_up_text">Sign Up !</string>
    <string name="title_activity_login">Sign in</string>
    <string name="add_item">Add New Item</string>
    <string name="action_logout">Logout</string>


</resources>
